# GeekWriter

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
geekwriter/: asgi.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
geekwriter/books/: apps.py  forms.py  models.py  urls.py  views.py
geekwriter/books/migrations/: 0001_initial.py  0002_book_content.py  0003_alter_book_author_alter_book_content.py
geekwriter/templates/: base.html  delete_form.html  form.html  index.html
geekwriter/templates/books/: book_detail.html  books.html
geekwriter/templates/users/: user_detail.html  writers.html
geekwriter/users/: apps.py  forms.py  models.py  urls.py  views.py
geekwriter/users/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_first_name_and_more.py
