[tool.poetry]
name = "GeekWriter"
version = "0.1.0"
description = "GeekWriter is an online platform for sharing literary masterpieces and literary experiences!"
authors = ["GrigoriyKruchinin <GrigoriyKruchinin>"]
readme = "README.md"
packages = [{include = "geekwriter"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
django = "^5.0"
django-bootstrap5 = "^23.3"
gunicorn = "^21.2.0"
django-filter = "^23.5"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.6.0"
dj-database-url = "^2.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
faker = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
